--- a/index.html
+++ b/index.html
@@ -394,16 +394,16 @@
       <div class="row mt-3">
           <div class="col-lg-6">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="../Books/img/profile.png"  class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/ceo3.jpg"  class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Soham Patel</h4>
                 <span>Chief Executive Officer</span>
-                <p>I'm engineer and entrepreneur and i build and operate companie to solve environmental, social and economic challenges. </p>
+                <p>I'm Developer, web & network designer and also Linux troubleshooter. Young people with technological savvy and the right attitude are valuable assets in the workforce.</p>
                 <div class="social">
-                  <a href="" target="_blank"><i class="ri-instagram-fill"></i></a>
-                  <a href="" target="_blank"> <i class="ri-linkedin-box-fill"></i> </a>
-                  <a href="" target="_blank"><i class="ri-mail-fill"></i></a>
-                  <a href="#" target="_blank"><i class="ri-facebook-fill"></i></a>
+                  <a href="https://www.instagram.com/linus_tor_/" target="_blank"><i class="ri-instagram-fill"></i></a>
+                  <a href="http://www.linkedin.com/in/soham-patel-09ba261ab" target="_blank"> <i class="ri-linkedin-box-fill"></i> </a>
+                  <a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&to=patelsoham532000@gmail.com" target="_blank"><i class="ri-mail-fill"></i></a>
+                  <a href="https://m.facebook.com/soham.username?ref=bookmarks" target="_blank"><i class="ri-facebook-fill"></i></a>
                 </div>
               </div>
             </div>
